# DesktopRecorder

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
DesktopRecorder/: buffer_queue.h  defines.cpp  defines.h  desktop_recorder_errors.h  hardware_acceleration.cpp  hardware_acceleration.h  headers_ffmpeg.h  main.cpp  record_contrl.cpp  record_contrl.h  record_desktop.cpp  record_desktop.h  record_desktop_dxgi.cpp  record_desktop_dxgi.h  record_dxgi.cpp  record_dxgi.h  utils_string.cpp  utils_string.h  video_encoder.cpp  video_encoder.h  video_encoder_define.h  video_encoder_nvenc.cpp  video_encoder_nvenc.h
DesktopRecorder/decode/: decoder.cpp  decoder.h
DesktopRecorder/encode/: h264_encoder.cpp  h264_encoder.h
DesktopRecorder/source/: dxcutscreen.cpp  dxcutscreen.h  open_device.cpp  open_device.h
